20220328：外測校稿修改

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <meta http-equiv="Expires" content="-1">
   <title>DBS digibank TW星展行動銀行(台灣)</title>
   <meta name="keyword" contents="" />
-  <meta name="description" contents="春暖花開好時節，Digibank與您隨行" />
+  <meta name="description" contents="春暖花開 Digibank與您隨行" />
   <meta name="copyright" content="DBS digibank TW星展行動銀行(台灣)" />
   <meta property="og:title" content="DBS digibank TW星展行動銀行(台灣)" />
   <meta property="og:type" content="product" />
   <meta property="og:url" content="https://www.dbs.com.tw/personal-zh/cards/offers/digital-2022Q1/campaign/index.html"/>
-  <meta property="og:description" content="春暖花開好時節，Digibank與您隨行" />
-  <meta property="og:image" content="https://www.dbs.com.tw/personal-zh/cards/offers/digital-2022Q1/campaign/images/share.jpg" />
+  <meta property="og:description" content="春暖花開 Digibank與您隨行" />
+  <meta property="og:image" content="https://tentenplus.com.tw/demos/DBS/digibankQ2/DBS_digibank_OGshare.jpg" />
   <meta property="og:site_name" content="DBS digibank TW星展行動銀行(台灣)" />
   <meta name='page.pageType' content='section home' />
   <meta name='page.site' content='pweb' />
@@ -59,7 +59,8 @@
           <div class="kv-item__logo">
             <img src="images/kv/kv-logo.png" alt="數位銀行星展領航">
           </div>
-          <div class="kv-item__title">春暖花開好時節<br>digibank與您隨行</div>
+          <div class="kv-item__title">春暖花開 digibank與您隨行<br>數位新朋友最高享
+            <span class="kvstrong">7-ELEVEN 300元</span></div>
         </div>
         <div class="kv-img">
           <img src="images/kv/kv-mobile.png" alt="iPhone">
@@ -107,7 +108,7 @@
         <div class="good-block">
           <div class="good-daily">
             <h2 class="title">
-              <div class="good-title__item title-item__main">數位好朋友喝咖啡</div>
+              <div class="title-item title-item__main">數位好朋友喝咖啡</div>
             </h2>
             <div class="good-daily__body">
               <div class="good-daily__img">
@@ -340,7 +341,7 @@
                 class="footer-socaillink__item footer-socaillink__item--twitter"></a>
               <a href="https://www.linkedin.com/company/dbs-bank" target="_blank"
                 class="footer-socaillink__item footer-socaillink__item--linkedin"></a>
-              <a href="https://www.youtube.com/user/DBS/feed" target="_blank"
+              <a href="https://youtube.com/channel/UCwAsuxe7JKNbCkT9BOTS1xw" target="_blank"
                 class="footer-socaillink__item footer-socaillink__item--youtube"></a>
             </div>
           </div>
