--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <div class="good-text">
                 <div class="good-daily__text">
                   每月透過digibank登入5次(含以上)<br>
-                  且使用digibank任意功能或交易即獲得<br>
+                  且使用digibank任一功能或交易即獲得<br>
                   <span class="deepred bold">City Cafe 中杯冰拿鐵</span><br>
                   (每月前2,000名，活動期間每人限獲一次)<br>
                   活動期間: 2022/4/1-2022/6/30
